--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 							<a href="https://www.ximuliunian.cf/W/" class="a">首页</a>
 						</li>
 						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/HTML5" class="a">HTML</a>
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/HTML5" class="a">HTML</a>
 						</li>
 						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/CSS" class="a">CSS</a>
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/CSS" class="a">CSS</a>
 						</li>
 						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/JS"  class="a">JS</a>
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS"  class="a">JS</a>
 						</li>
 						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/example" class="a">小实例</a>
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/example" class="a">小实例</a>
 						</li>
 						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/BUG" class="a">报错案例</a>
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/BUG" class="a">报错案例</a>
 						</li>
 				</nav>
 				<!--搜索栏-->
