--- a/fuye/navigation/CSS.html
+++ b/fuye/navigation/CSS.html
@@ -25,8 +25,8 @@
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/fuye/navigation/HTML5" class="a">HTML</a>
 						</li>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/CSS" class="a">CSS</a>
+						<li class="li-1">
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/CSS" class="a"><b>CSS</b></a>
 						</li>
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS"  class="a">JS</a>
