--- a/fuye/navigation/HTML5.html
+++ b/fuye/navigation/HTML5.html
@@ -22,8 +22,8 @@
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/" class="a">首页</a>
 						</li>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/HTML5" class="a">HTML</a>
+						<li class="li-1">
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/HTML5" class="a"><b>HTML</b></a>
 						</li>
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/fuye/navigation/CSS" class="a">CSS</a>
