--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<div id="head-buttom">
 				<!--导航栏-->
 				<nav>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/" class="a">首页</a>
+						<li class="li-1">
+							<a href="https://www.ximuliunian.cf/W/" class="a"><b>首页</b></a>
 						</li>
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/fuye/navigation/HTML5" class="a">HTML</a>
