--- a/fuye/navigation/BUG.html
+++ b/fuye/navigation/BUG.html
@@ -34,8 +34,8 @@
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/fuye/navigation/example" class="a">小实例</a>
 						</li>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/BUG" class="a">报错案例</a>
+						<li class="li-1">
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/BUG" class="a"><b>报错案例</b></a>
 						</li>
 				</nav>
 				<!--搜索栏-->
