--- a/fuye/navigation/JS.html
+++ b/fuye/navigation/JS.html
@@ -28,8 +28,8 @@
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/fuye/navigation/CSS" class="a">CSS</a>
 						</li>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS"  class="a">JS</a>
+						<li class="li-1">
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS"  class="a"><b>JS</b></a>
 						</li>
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/fuye/navigation/example" class="a">小实例</a>
