--- a/fuye/navigation/example.html
+++ b/fuye/navigation/example.html
@@ -31,8 +31,8 @@
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS"  class="a">JS</a>
 						</li>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/example" class="a">小实例</a>
+						<li class="li-1">
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/example" class="a"><b>小实例</b></a>
 						</li>
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/fuye/navigation/BUG" class="a">报错案例</a>
