--- a/fuye/navigation/H5-C3.html
+++ b/fuye/navigation/H5-C3.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>王辰的个人博客</title>
-	<link rel="stylesheet" type="text/css" href="css/page-style/index.css" />
+	<link rel="stylesheet" type="text/css" href="../../css/page-style/index.css" />
 </head>
 
 <body>
@@ -25,17 +25,17 @@
 				</div>
 				<!--导航栏-->
 				<nav>
-					<li class="li-1">
+					<li class="li">
 						<a href="https://www.ximuliunian.cf/W/" class="a"><b>首页</b></a>
 					</li>
-					<li class="li">
+					<li class="li-1">
 						<a href="https://www.ximuliunian.cf/W/fuye/navigation/H5-C3" class="a">H5/C3</a>
 					</li>
 					<li class="li">
 						<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS" class="a">JS</a>
 					</li>
 					<li class="li">
-						<a href="https://www.ximuliunian.cf/W/fuye/navigation/suiji" class="a">C随记</a>
+						<a href="https://www.ximuliunian.cf/W/fuye/navigation/suiji" class="a">随记</a>
 					</li>
 					<li class="li">
 						<a href="https://www.ximuliunian.cf/W/fuye/navigation/example" class="a">小实例</a>
@@ -70,7 +70,6 @@
 				<br />
 				<p class="p-2">html有许许多多的标签，每一个都有其作用......</p>
 				<div id="li-bottom">
-					<span><b>分类：</b><a href="https://www.ximuliunian.cf/W/fuye/navigation/H5-C3">H5/C3</a></span>
 					<span><b>创建时间：</b>2022年5月27日</span>
 					<span><b>更新时间：</b>2022年5月30日</span>
 				</div>
