--- a/fuye/navigation/JS.html
+++ b/fuye/navigation/JS.html
@@ -23,13 +23,13 @@
 							<a href="https://www.ximuliunian.cf/W/" class="a">首页</a>
 						</li>
 						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/HTML5" class="a">HTML</a>
-						</li>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/CSS" class="a">CSS</a>
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/H5-C3" class="a">H5/C3</a>
 						</li>
 						<li class="li-1">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS"  class="a"><b>JS</b></a>
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS"  class="a">JS</a>
+						</li>
+						<li class="li">
+							<a href="https://www.ximuliunian.cf/W/fuye/navigation/suiji" class="a"><b>随记</b></a>
 						</li>
 						<li class="li">
 							<a href="https://www.ximuliunian.cf/W/fuye/navigation/example" class="a">小实例</a>
