--- a/fuye/H5-C3/1.html
+++ b/fuye/H5-C3/1.html
@@ -31,17 +31,7 @@
 
 <body>
 	<header>
-		<img src="https://s1.328888.xyz/2022/05/28/tdTDR.jpg" />
 		<p>HTML标签</p>
-		<div id="message">
-			<span>
-				<img src="../../img/图标/xinxi.png" />
-				<b class="b-1">
-					<a href="https://www.ximuliunian.cf/W/fuye/navigation/H5-C3">H5/C3</a>
-				</b>
-			</span>
-			<span><img src="../../img/图标/shijian.png" /><b class="b-1">2022年5月30日</b></span>
-		</div>
 	</header>
 	<!-- 
 		<div class="line-style">
@@ -52,6 +42,12 @@
 		</div>
 		 -->
 	<article>
+		<div class="line-style">
+			<p><b>标签：</b> br</p>
+			<p><b>写法；</b>&lt;br /&gt;</p>
+			<p><b>元素：</b>替换元素</p>
+			<p><b>简介：</b>在一个标签的结束标签和另一个开始标签中间编写br可以对标签要输出的内容进行换行</p>
+		</div>
 		<div class="line-style">
 			<p><b>标签：</b> em,i</p>
 			<p><b>写法；</b>&lt;em&gt;&emsp;&lt;/em&gt;，&lt;i&gt;&emsp;&lt;/i&gt;</p>
