--- a/fuye/navigation/JS.html
+++ b/fuye/navigation/JS.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
 	<meta charset="UTF-8" />
 	<title>王辰的个人博客</title>
-	<link rel="stylesheet" type="text/css" href="../../css/page-style/index.css"/>
+	<link rel="stylesheet" type="text/css" href="../../css/page-style/index.css" />
 </head>
+
 <body>
 	<!--头部-->
 	<header>
@@ -19,24 +21,24 @@
 			<div id="head-buttom">
 				<!--导航栏-->
 				<nav>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/" class="a">首页</a>
-						</li>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/H5-C3" class="a">H5/C3</a>
-						</li>
-						<li class="li-1">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS"  class="a">JS</a>
-						</li>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/suiji" class="a"><b>随记</b></a>
-						</li>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/example" class="a">小实例</a>
-						</li>
-						<li class="li">
-							<a href="https://www.ximuliunian.cf/W/fuye/navigation/BUG" class="a">报错案例</a>
-						</li>
+					<li class="li">
+						<a href="https://www.ximuliunian.cf/W/" class="a">首页</a>
+					</li>
+					<li class="li">
+						<a href="https://www.ximuliunian.cf/W/fuye/navigation/H5-C3" class="a">H5/C3</a>
+					</li>
+					<li class="li-1">
+						<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS" class="a">JS</a>
+					</li>
+					<li class="li">
+						<a href="https://www.ximuliunian.cf/W/fuye/navigation/suiji" class="a">随记</a>
+					</li>
+					<li class="li">
+						<a href="https://www.ximuliunian.cf/W/fuye/navigation/example" class="a">小实例</a>
+					</li>
+					<li class="li">
+						<a href="https://www.ximuliunian.cf/W/fuye/navigation/BUG" class="a">报错案例</a>
+					</li>
 				</nav>
 				<!--搜索栏-->
 				<div id="search">
@@ -47,12 +49,13 @@
 		<!--右侧-个人介绍-->
 		<div id="head-right">
 			<p>博主信息</p>
-			<hr color="#FFFFFF"/>
+			<hr color="#FFFFFF" />
 			<li>大名：<b>王辰</b></li>
 			<li>邮箱：<b style="font-size: 25px;">a3436528385@outlook.com</b></li>
-			<li>特长：<b  style="font-size: 25px;">德智体美劳 均衡发展，没啥特长</b></li>
+			<li>特长：<b style="font-size: 25px;">德智体美劳 均衡发展，没啥特长</b></li>
 			<li>介绍：<b style="font-size: 30px;">一个正在发愤图强的 菜鸟</b></li>
 		</div>
 	</header>
 </body>
+
 </html>
