--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<a href="https://www.ximuliunian.cf/W/fuye/navigation/JS" class="a">JS</a>
 					</li>
 					<li class="li">
-						<a href="https://www.ximuliunian.cf/W/fuye/navigation/suiji" class="a">C随记</a>
+						<a href="https://www.ximuliunian.cf/W/fuye/navigation/suiji" class="a">随记</a>
 					</li>
 					<li class="li">
 						<a href="https://www.ximuliunian.cf/W/fuye/navigation/example" class="a">小实例</a>
@@ -58,11 +58,7 @@
 	</header>
 	<article>
 		<li class="body-li">
-			<div class="li-box-1">
-				<a href="https://www.ximuliunian.cf/W/fuye/H5-C3/1">
-					<img src="https://s1.328888.xyz/2022/05/27/tivZi.png" alt="图片君开小差了~" title="进入页面" />
-				</a>
-			</div>
+
 			<div class="li-box-2">
 				<a href="https://www.ximuliunian.cf/W/fuye/H5-C3/1" class="p-1">
 					HTML标签
@@ -74,12 +70,7 @@
 					<span><b>创建时间：</b>2022年5月27日</span>
 					<span><b>更新时间：</b>2022年5月30日</span>
 				</div>
-			</div>
-			<div class="li-box-3">
-				<a href="https://www.ximuliunian.cf/W/fuye/H5-C3/1">
-					<img src="https://s1.328888.xyz/2022/05/27/tijsR.png" alt="图片君开小差了~" title="进入页面" />
-				</a>
-			</div>
+
 		</li>
 	</article>
 </body>
