--- a/fu-ye/H5-C3/元素关系.html
+++ b/fu-ye/H5-C3/元素关系.html
@@ -94,12 +94,12 @@
             <p> display : inline ，定义元素为行内元素</p>
 
             <p> display：inline-block，定义元素为行内块级元素。</p>
+            <div class="bottom">
+                <p>没有更多的内容了~</p>
+                <a href="#">回到顶部</a>
+            </div>
         </div>
     </div>
-    <!-- <div class="bottom">
-        <p>到底了~</p>
-        <a href="#">回到顶部</a>
-    </div> -->
 </body>
 
 </html>
