--- a/nav/H5-C3.html
+++ b/nav/H5-C3.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>曦暮流年の博客</title>
     <!-- 引入页面样式 -->
-    <link rel="stylesheet" href="../CSS/index.CSS">
+    <link rel="stylesheet" href="../CSS/index.css">
     <!-- 引入页面logo -->
     <link rel="Shortcut Icon" href="https://www.ximuliunian.cf/ku/img/ico/logo.ico" type="image/x-icon" />
 
@@ -57,7 +57,7 @@
                 </span>
                 <span class="body-text-bottom-right">
                     <img src="https://s1.ax1x.com/2022/07/09/jrM3NV.png" alt="">
-                    <p><a href="fu-ye/H5-C3/元素关系.html">H5/C3</a></p>
+                    <p><a href="H5-C3.html">H5/C3</a></p>
                 </span>
             </div>
         </span>
