--- a/nav/wen-zhang.html
+++ b/nav/wen-zhang.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>曦暮流年の博客</title>
     <!-- 引入页面样式 -->
-    <link rel="stylesheet" href="../CSS/index.CSS">
+    <link rel="stylesheet" href="../CSS/index.css">
     <!-- 引入页面logo -->
     <link rel="Shortcut Icon" href="https://www.ximuliunian.cf/ku/img/ico/logo.ico" type="image/x-icon" />
 
