--- a/fu-ye/nan-ti/Edge游览器问题.html
+++ b/fu-ye/nan-ti/Edge游览器问题.html
@@ -62,7 +62,7 @@
 
             <p>既方法一之后如果限制管理员身份，保存不了的话，可以通过以下方法来保存</p>
 
-            <p>先打开<b>hosts</b>文件,然后复制(Ctrl+c)该文件,到桌面(随便什么地方)粘贴文件</p>
+            <p>先打开<b>hosts</b>文件,然后复制(Ctrl+c)该文件,到桌面(随便什么地方)粘贴(Ctrl+v)文件</p>
 
             <p>打开文件并复制粘贴方法一需要写入的文本,然后保存</p>
 
