--- a/fu-ye/wen-zhang/代码高亮-行号.html
+++ b/fu-ye/wen-zhang/代码高亮-行号.html
@@ -30,7 +30,7 @@
     </header>
     <div id="body">
         <div class="body">
-            <p id="shi-jian">本文最后更新于：2022.7.11 中午</p>
+            <p id="shi-jian">本文最后更新于：2022-7-11 中午</p>
 
             <h2>前言</h2>
 
