--- a/nav/MC.html
+++ b/nav/MC.html
@@ -5,52 +5,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>曦暮流年の博客</title>
-    <!-- 引入页面样式 -->
-    <link rel="stylesheet" href="../CSS/index.css">
-    <!-- 引入页面logo -->
+    <title>正在开发</title>
     <link rel="Shortcut Icon" href="https://www.ximuliunian.cf/ku/img/ico/logo.ico" type="image/x-icon" />
+    <style>
+        /* 电脑 */
+        @media screen and (min-width: 960px) {
 
+            /* 背景图片 */
+            body {
+                background: url(https://s1.328888.xyz/2022/06/09/CXIwO.jpg);
+                background-repeat: no-repeat;
+                background-size: 100%100%;
+                background-attachment: fixed;
+                min-width: 960px;
+            }
+        }
+
+        /* 平板 */
+        @media screen and (max-width: 960px) and (min-width: 750px) {
+
+            /* 背景图片 */
+            body {
+                background: url(https://s1.328888.xyz/2022/06/11/Cm0re.png);
+                background-repeat: no-repeat;
+                background-size: 100%100%;
+                background-attachment: fixed;
+                min-width: 750px;
+            }
+        }
+
+
+        /* 手机 */
+        @media screen and (max-width: 750px) {
+
+            /* 背景图片 */
+            body {
+                background: url(https://s1.328888.xyz/2022/06/19/0kDkT.png);
+                background-repeat: no-repeat;
+                background-size: 100%100%;
+                background-attachment: fixed;
+                min-width: 250px;
+            }
+
+        }
+
+        div {
+            width: 300px;
+            height: 300px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            border-radius: 15px;
+            background: inherit;
+            filter: blur(10px);
+        }
+
+        span {
+            width: 300px;
+            height: 300px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            text-align: center;
+            line-height: 300px;
+            font-size: 30px;
+
+        }
+    </style>
 </head>
 
 <body>
-    <!-- 导航 开始 -->
-    <nav>
-        <a href="https://www.ximuliunian.cf" target="_blank"><img src="../ku/img/logo.png" alt="返回主页" title="返回主页"></a>
-        <div class="ydd">
-            <ul id="ydd">
-                <li><a href="https://www.ximuliunian.cf/bo-ke">&nbsp;&nbsp;博客主页</a></li>
-                <li><a href="../nav/H5-C3.html">&nbsp;&nbsp;H5/C3</a></li>
-                <li><a href="../nav/nan-ti.html">&nbsp;&nbsp;问题/方法</a></li>
-                <li><a href="../nav/wen-zhang.html">&nbsp;&nbsp;文章</a></li>
-                <li><a href="../nav/shi-li.html">&nbsp;&nbsp;小实例</a></li>
-                <li><a href="../nav/MC.html">&nbsp;&nbsp;Minecraft</a></li>
-            </ul>
-        </div>
-        <ul>
-            <li><a href="https://www.ximuliunian.cf/bo-ke">博客主页</a></li>
-            <li><a href="../nav/H5-C3.html">H5/C3</a></li>
-            <li><a href="../nav/nan-ti.html">问题/方法</a></li>
-            <li><a href="../nav/wen-zhang.html">文章</a></li>
-            <li><a href="../nav/shi-li.html">小实例</a></li>
-            <li><a href="../nav/MC.html">Minecraft</a></li>
-        </ul>
-    </nav>
-    <!-- 导航 结束 -->
-
-
-    <!-- 内容 开始 -->
-    <div id="body-3" class="body-3">
-        <ul>
-
-        </ul>
-    </div>
-    <!-- 内容 结束 -->
-
-
-    <!-- 内容开始 -->
-    <div> . </div>
-    <!-- 内容 结束 -->
+    <div></div>
+    <span>正在开发</span>
 </body>
 
 </html>
