--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
 
             <!-- 3 -->
             <div class="top-right-img padg">
-                <a href="">
-                    <img src="https://wrz521.top:8080/uploads/art_cover-2021-09-13%2020-12-23.jpg" alt="图片找不到了~"
-                        title="进入页面">
-                    <p>正在努力书写</p>
+                <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/shi-li/分页栏">
+                    <img src="https://s1.328888.xyz/2022/07/22/mCviB.gif" alt="图片找不到了~" title="进入页面">
+                    <p>分页栏小实例</p>
                 </a>
             </div>
             <!-- 4 -->
@@ -128,6 +127,32 @@
     <!-- 内容-3 开始 -->
     <div id="body-3">
         <ul>
+
+
+
+            <li>
+                <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/shi-li/分页栏">
+                    <img src="https://s1.328888.xyz/2022/07/22/mCviB.gif" alt="找不到图片了~" title="进入页面">
+                </a>
+                <div class="content">
+                    <div class="top-text">
+                        <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/shi-li/分页栏">
+                            分页栏小实例
+                        </a>
+                    </div>
+                    <div class="center-text">
+                        <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/shi-li/分页栏">
+                            网页最底部一般都有有个分页的东西，如：<br>
+                            上一页 1 2 3 ... 下一页<br>
+                            具体实现过程在本文
+                        </a>
+                    </div>
+                    <div class="bottom-text">
+                        <span>时间:2022-7-22</span>
+                        <span>分类: <a href="https://www.ximuliunian.cf/bo-ke/nav/shi-li">小实例</a> </span>
+                    </div>
+                </div>
+            </li>
 
 
             <li>
