--- a/nav/shi-li.html
+++ b/nav/shi-li.html
@@ -40,7 +40,29 @@
     <!-- 内容 开始 -->
     <div id="body-3" class="body-3">
         <ul>
-
+            <li>
+                <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/shi-li/分页栏">
+                    <img src="https://s1.328888.xyz/2022/07/22/mCviB.gif" alt="找不到图片了~" title="进入页面">
+                </a>
+                <div class="content">
+                    <div class="top-text">
+                        <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/shi-li/分页栏">
+                            分页栏小实例
+                        </a>
+                    </div>
+                    <div class="center-text">
+                        <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/shi-li/分页栏">
+                            网页最底部一般都有有个分页的东西，如：<br>
+                            上一页 1 2 3 ... 下一页<br>
+                            具体实现过程在本文
+                        </a>
+                    </div>
+                    <div class="bottom-text">
+                        <span>时间:2022-7-22</span>
+                        <span>分类: <a href="https://www.ximuliunian.cf/bo-ke/nav/shi-li">小实例</a> </span>
+                    </div>
+                </div>
+            </li>
         </ul>
     </div>
     <!-- 内容 结束 -->
