--- a/fu-ye/H5-C3/元素关系.html
+++ b/fu-ye/H5-C3/元素关系.html
@@ -91,6 +91,7 @@
             <p> display：inline-block，定义元素为行内块级元素。</p>
             <div class="bottom">
                 <p>没有更多的内容了~</p>
+                <a href="https://www.ximuliunian.cf/fu-ye/da-shang">打赏</a>
                 <a href="https://www.ximuliunian.cf/fu-ye/lian-xi" id="lian-xi">联系我</a>
                 <a href="#">回到顶部</a>
             </div>
