--- a/fu-ye/H5-C3/单位.html
+++ b/fu-ye/H5-C3/单位.html
@@ -71,6 +71,7 @@
 
             <div class="bottom">
                 <p>没有更多的内容了~</p>
+                <a href="https://www.ximuliunian.cf/fu-ye/da-shang">打赏</a>
                 <a href="https://www.ximuliunian.cf/fu-ye/lian-xi" id="lian-xi">联系我</a>
                 <a href="#">回到顶部</a>
             </div>
