--- a/nav/wen-zhang.html
+++ b/nav/wen-zhang.html
@@ -41,6 +41,28 @@
     <div id="body-3" class="body-3">
         <ul>
             <li>
+                <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/wen-zhang/修改VScode生成H5模板的lang">
+                    <img src="https://s1.328888.xyz/2022/07/22/mCXqS.gif" alt="找不到图片了~" title="进入页面">
+                </a>
+                <div class="content">
+                    <div class="top-text">
+                        <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/wen-zhang/修改VScode生成H5模板的lang">
+                            修改VS code 生成的HTML的lang
+                        </a>
+                    </div>
+                    <div class="center-text">
+                        <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/wen-zhang/修改VScode生成H5模板的lang">
+                            VS Code修改默认生成HTML模板的英文lang=en修改为中文lang=zh-CN
+                        </a>
+                    </div>
+                    <div class="bottom-text">
+                        <span>时间:2022-7-11</span>
+                        <span>分类: <a href="https://www.ximuliunian.cf/bo-ke/nav/wen-zhang">文章</a> </span>
+                    </div>
+                </div>
+            </li>
+
+            <li>
                 <a href="https://www.ximuliunian.cf/bo-ke/fu-ye/wen-zhang/代码高亮-行号">
                     <img src="https://s1.ax1x.com/2022/07/11/jy6wZ9.png" alt="找不到图片了~" title="进入页面">
                 </a>
